# bolke

./: .gitignore  INTEGRATION_PLAN.md  NATIVE_AUDIO_GUIDE.md  README.md  SETUP.md  TESTING.md  liveapi.md  plan.md
.claude/: settings.local.json
backend/: .env.example  BROWSER_FIX.md  BROWSER_USE_SETUP.md  MODEL_CONFIG.md  VOICE_TO_ORDER_FLOW.md  audio_streaming.py  browser_agents.py  check_api.py  debug_imports.py  gemini_engine.py  main.py  pyproject.toml  run.py  setup_browser.ps1  test_audio_stream.py  test_browser.py  test_search.py  test_ws.py
frontend/: constants.ts  index.html  package-lock.json  package.json  types.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CartDrawer.tsx  LanguageSelector.tsx  MicButton.tsx  ProductCard.tsx  Waveform.tsx
frontend/hooks/: useLiveAgent.ts
frontend/public/: worklet.js
frontend/services/: api.ts  backendService.ts  geminiService.ts  nativeAudio.ts
